platforms/infrastructure/foundation/k8s-legacy/production/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: machine-native-ops
    eco-base/governance: aligned
    eco-base/part-of: eco-base
    environment: production
  name: machine-native-ops-gateway
  namespace: production
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - api.machinenativeops.com
    - machinenativeops.com
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - api.machinenativeops.com
    - machinenativeops.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      cipherSuites:
      - ECDHE-ECDSA-AES128-GCM-SHA256
      - ECDHE-ECDSA-AES256-GCM-SHA384
      - ECDHE-ECDSA-CHACHA20-POLY1305
      - ECDHE-RSA-AES128-GCM-SHA256
      - ECDHE-RSA-AES256-GCM-SHA384
      - ECDHE-RSA-CHACHA20-POLY1305
      credentialName: machinenativeops-tls-cert
      maxProtocolVersion: TLSV1_3
      minProtocolVersion: TLSV1_2
      mode: SIMPLE
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    eco-base/audit-log-level: minimal
    eco-base/governance-policy: standard-v1
    eco-base/uri: eco-base://k8s/core/service/machine-native-ops-lb
    eco-base/urn: urn:eco-base:k8s:core:service:machine-native-ops-lb:sha256-dad9063f98bf130f334c178f64b7c40611035e213c1b9276b1595386d316a783
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels:
    app.kubernetes.io/component: eco-component
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: machine-native-ops
    app.kubernetes.io/part-of: eco-base
    app.kubernetes.io/version: 1.0.0
    eco-base/environment: development
    eco-base/governance: aligned
    eco-base/owner: eco-system
    eco-base/part-of: eco-base
    eco-base/platform: core
    environment: production
  name: machine-native-ops-lb
  namespace: production
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    istio: ingressgateway
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  type: LoadBalancer
